# Setup-the-bot-to-railway

./: .deployignore  .env.example  .gitignore  .replit  AGENTS.md  AI記憶系統地球語說明書.md  CHANGELOG.md  DEPLOYMENT.md  DevMemory_Backend.py  DevMemory_Supabase_Schema.sql  PROJECT_ARCHITECTURE_REPORT.md  PROJECT_STRUCTURE.md  README.md  REDIS_FIX_FINAL.md  SETUP_GUIDE.md  app.py  bot.py  main.py  package.json  pinecone_test.py  pyproject.toml  pytest.ini  replit  replit.md  requirements.txt  supabase_conversation_archive_schema.sql  test_file_injection.py  test_modules_integration.py  三個樂高的整合魔法書.md  交付說明.md  快速啟動.md  檔案注入功能驗證報告.md  設定指南.md
.github/: pull_request_template.md
DevMemoryModule/: DevMemory_Backend_V2.py  DevMemory_Streamlit_UI.py  DevMemory_Streamlit_UI_V2.py  DevMemory_Supabase_Schema_V2.sql  README.md  一竅哥急救樂高使用指南.md  修復完成總結.md  啟動腳本.sh  啟動腳本_V2.sh  安裝指南_V2.md
SemanticMemoryUploaderMini/: .env.example  app.py  diagnose_pinata.py  ipfs_tools.py  record_store.py  summarizer.py  test_uploader.py  使用說明書.md
Setup-the-bot-to-railway/: main.py  requirements.txt  test_redis_connection.py  【修復完成】三項功能修復摘要_V1.md
attached_assets/: Pasted--Project-XiaoChengGuang-System-Phase-2--1760895670741_1760895670742.txt  phase2_1761118877614.md  上傳模組_IPFS封存整合執行書_1762016193257.md  五大單元指南prompt_1760894233885.txt  修改工程prompt_1761308022042.txt  前言導引指南_1760900619109.txt  問題回覆確認_1761754347875.txt  完整版設計藍圖工程語言_1760893896720.docx  專案架構與功能說明書_1761119620842.md  無法讀取檔案_1762057306327.txt  版面適正和優化_1762036672528.txt  第一階段問題修復測試回報_1761757486340.txt  第二階段功能修復_1761848261365.txt  (+5 more)
docs/: BACKUP.md  (+14 more)
(+218 files in other folders)
